tests/e2e/semantics/semi_global_assignment8.error
Error: syntax error in story at line 4, column 5

4|        a += 1
          ^

E0127: `a` is readonly and can not be assigned to.
