tests/e2e/semantics/semi_global_assignment8.story
# FEAT: globals=False
a = 0
while true
    a += 1
